--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AndroidProject"
         tools:targetApi="31">
         <activity
-            android:name=".view.SignupActivity"
+            android:name=".view.login_sign.SignupActivity"
             android:exported="false" />
         <activity
             android:name=".view.welcom.SplashScreenActivity"
